# mlp

./: .gitignore
misc/: cmd
src/: CMakeLists.txt  LinearAlloc.hpp  Makefile  Matrix.hpp  Network.hpp  NetworkMatrixImpl.hpp  main.cpp
src/Matrix/: Makefile  Matrix.hpp  allocator.cpp  allocator.hpp  header.hpp  linalloc.cpp  linalloc.hpp  main.cpp  stl_adaptor.hpp
src/project/: CMakeLists.txt  LinearAlloc.hpp  Matrix.hpp  Network.hpp  main.cpp
src/project/lib/csv-parser/: CMakeLists.txt
src/project/lib/csv-parser/programs/: csv_info  csv_stats
